# oai-proxy

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
scripts/: docker_build.sh
src/: cache.py  context_retriever.py  hydrator.py  main.py
src/clients/: __init__.py  bang_command_handler_client.py  context_client_p.py  multi_client.py  website_client.py
src/models/: context.py  message.py  resource.py  response.py
tests/: test_chat_api.py  test_hydrator.py  test_hydrator_with_bang_commands.py  test_hydrator_with_clients.py  test_litellm_client.py
tests/clients/: test_bang_command_handler_client.py
