[project]
name = "proxy"
version = "0.1.0"
dependencies = [
    "uv>=0.4.6",
    "fastapi>=0.103.0",
    "pydantic>=2.0.0",
    "litellm>=1.15.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
    "uvicorn>=0.23.0",
    "loguru>=0.7.3",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=4.0.0",
    "ruff>=0.0.0",
]
