[project]
name = "proxy"
version = "0.1.0"
dependencies = [
    "uv>=0.4.6",
    "fastapi>=0.103.0",
    "pydantic>=2.0.0",
    "litellm", # Allow upgrading to the latest version
    "httpx>=0.24.0",
    "pytest>=7.0.0",
    "uvicorn>=0.23.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "logfire[fastapi]>=3.14.1",
    "opentelemetry-instrumentation-asgi>=0.53b1",
    "redis>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=4.0.0",
    "ruff>=0.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.20.0", # Use a recent version
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poe.tasks]
sort_imports = { cmd = "ruff check --select I --fix ." }
format = { cmd = "ruff format ." }
lint = { cmd = "ruff check --fix ." }
tidy = ["sort_imports", "format"]
all = { sequence = ["sort_imports", "format", "lint"], help = "Run all code quality checks" }
